--- a/level5/level5.csproj
+++ b/level5/level5.csproj
@@ -9,10 +9,14 @@
 
   <ItemGroup>
     <None Remove="input.txt" />
+    <None Remove="sample.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="sample.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
