--- a/level11/level11.csproj
+++ b/level11/level11.csproj
@@ -9,11 +9,15 @@
 
   <ItemGroup>
     <None Remove="example.txt" />
+    <None Remove="example1.txt" />
     <None Remove="input.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="example.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="example1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="input.txt">
