--- a/level15/level15.csproj
+++ b/level15/level15.csproj
@@ -9,10 +9,14 @@
 
   <ItemGroup>
     <None Remove="example.txt" />
+    <None Remove="input.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="example.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
